[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.9.0"
async-std = { version = "1.10.0", features = ["attributes", "unstable"] }
futures = "0.3.28"
nix = "0.24"
pin-utils = "0.1.0"
polling = "2.0.0"
scoped-tls = "1.0.1"
tokio = "1.32.0"
waker-fn = "1.1.0"

[toolchain]
channel = "nightly"
